# aoc2020

./: .clang-format  CMakeLists.txt  README.md
day1/: main.cpp
day10/: main.cpp
day11/: main.cpp
day12/: main.cpp
day13/: main.cpp
day14/: main.cpp
day15/: main.cpp
day16/: main.cpp
day17/: main.cpp
day18/: main.cpp
day19/: main.cpp
day2/: main.cpp
day20/: main.cpp
day21/: main.cpp
day22/: main.cpp
day23/: main.cpp
day24/: main.cpp
day25/: main.cpp
day3/: main.cpp
day4/: main.cpp
day5/: main.cpp
day6/: main.cpp
day7/: main.cpp
day8/: main.cpp
day9/: main.cpp
